sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:7: error: '(' expected but identifier found.
   else if pot > 0
           ^